# family_recipy

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  nginx.conf  pyproject.toml
app/: auth.py  database.py  main.py  models.py  pdf.py  tags.py
app/partials/: recipe_list.html
app/templates/: add.html  base.html  list.html  login.html  recipe.html
